# sc-claude-code-files

./: CLAUDE.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_mocks.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh
